# simulatingOceanWater

./: CMakeLists.txt  README.md
basic/: Camera.cpp  Camera.hpp  Math.hpp  MeshBasic.cpp  SceneBase.hpp
src/: CMakeLists.txt  Ocean.cpp  Ocean.hpp  OceanRender.cpp  OceanRender.hpp  Scene.cpp  Scene.hpp  basic  main.cpp
src/basic/: CMakeLists.txt  MeshBasic.hpp  MeshBasicRender.cpp  MeshBasicRender.hpp  SceneBase.cpp  Shader.cpp  Shader.hpp
src/basic/imguiGlfwOpenGL/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp
src/shaders/: Solid.frag  Solid.vert  ampl.comp  ifft2.comp  ocean.frag  ocean.vert  sign.comp
